# Classroom-Assistant

./: .env.example  Procfile  README.md  main.py  manifest.yml  pyproject.toml  requirements.txt
dialogflow_utils/: document_utils.py  intent_utils.py  knowledge_base_utils.py
slack_utils/: app_constants.py
