[tool.poetry]
name = "classroom-assistant"
version = "1.0.0"
description = "Classroom Assistant is a publicly distributable Slack application that can intelligently answer student questions in the place of an instructor or TA."
authors = ["ChristopherWMM"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.5.0"
google-cloud-dialogflow = "^2.1.0"
flask = "^2.0.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
